RESOLVED FIXED19431
REGRESSION (r32406): tabs retain hover color after mouse out
https://bugs.webkit.org/show_bug.cgi?id=19431
Summary REGRESSION (r32406): tabs retain hover color after mouse out
Matt Lilek
Reported 2008-06-07 18:14:17 PDT
The tabs on <http://www.colourlovers.com/> retain their hovered appearance after the mouse leaves the tab in ToT. Regression from Safari 3.1.1 (5525.20)
Attachments
Fix typo in CSS property shorthand map; improve test (40.70 KB, patch)
2008-06-07 22:47 PDT, mitz
hyatt: review+
mitz
Comment 1 2008-06-07 22:46:09 PDT
mitz
Comment 2 2008-06-07 22:47:50 PDT
Created attachment 21570 [details] Fix typo in CSS property shorthand map; improve test
Dave Hyatt
Comment 3 2008-06-07 22:51:28 PDT
Comment on attachment 21570 [details] Fix typo in CSS property shorthand map; improve test OMG I FAIL. r=me
mitz
Comment 4 2008-06-07 22:57:34 PDT
Note You need to log in before you can comment on or make changes to this bug.