WebCore:

Reviewed by Dave Hyatt.

        - fix https://bugs.webkit.org/show_bug.cgi?id=19431
          <rdar://problem/5994060> REGRESSION (r32406): tabs retain hover color after mouse out

        Covered by fast/css/remove-shorthand.html

        * css/CSSMutableStyleDeclaration.cpp:
        (WebCore::initShorthandMap): Fixed a typo which mapped the background
        shorthand to the mask properties.

LayoutTests:

        Reviewed by Dave Hyatt.

        - updated test for https://bugs.webkit.org/show_bug.cgi?id=19431
          <rdar://problem/5994060> REGRESSION (r32406): tabs retain hover color after mouse out

        * fast/css/remove-shorthand-expected.txt:
        * fast/css/remove-shorthand.html:



Canonical link: https://commits.webkit.org/26889@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34438 268f45cc-cd09-0410-ab3c-d52691b4dbfc